--- a/package.json
+++ b/package.json
@@ -5,15 +5,25 @@
   "scripts": {
     "build": "tsup ./src"
   },
-  "homepage": "",
-  "keywords": ["tsup", "npm", "template", "typescript"],
+  "homepage": "https://github.com/koji/npm-package-template-tsup",
+  "url": "https://github.com/koji/npm-package-template-tsup/issue",
+  "email": "kojikoji@skiff.com",
+  "keywords": [
+    "tsup",
+    "npm",
+    "template",
+    "typescript"
+  ],
   "author": "koji",
   "license": "ISC",
   "devDependencies": {
     "tsup": "^6.7.0",
     "typescript": "^5.1.3"
   },
-  "files": ["dist", "package.json"],
+  "files": [
+    "dist",
+    "package.json"
+  ],
   "exports": {
     ".": {
       "require": "./dist/index.js",
